--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <img src="img/chisenon_icon.jpg" alt>
 
       <span class="ans">
-        <h1>chisenon</h1><!-- 本文 -->
+        <h1>chisenon</h1>
         <p>関西人の血が流れています
           <br>
           色々試してみたいお年頃の高校生エンジニア🔰です
