--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 <body>
   <header>
     <div class="nav">
+
       <h1 class="title">
         ちせのーと
       </h1>
+
+      <div class="higari"></div>
 
       <div class="migi">
         <ul class="sns">
@@ -39,95 +42,121 @@
     </div>
     <!--変更の余地あり-->
   </header>
+  <div class="wrapper">
+    <section class="main">
+      <!--変更の余地あり-->
 
-  <div class="main">
-    <!--変更の余地あり-->
+      <p class="caution">⚠️このサイトはポートフォリオとして作成しておりますが、上手く動かないことがあります。</p>
 
-    <p class="caution">⚠️このサイトはポートフォリオとして作成しておりますが、上手く動かないことがあります。</p>
+      <div class="who">
+        <img src="img/chisenon_icon.jpg" alt>
 
-    <div class="who">
-      <img src="img/chisenon_icon.jpg" alt>
+        <span class="answer">
+          <h1>chisenon</h1><!-- 本文 -->
+          <p>関西人の血が流れています
+            <br>
+            色々試してみたいお年頃の高校生エンジニア🔰です
+            <br>
+            CとPythonでよく遊んでいます
+            <br>
+          </p>
+        </span>
+      </div>
 
-      <span class="ans">
-        <h1>chisenon</h1>
-        <p>関西人の血が流れています
-          <br>
-          色々試してみたいお年頃の高校生エンジニア🔰です
-          <br>
-          CとPythonでよく遊んでいます
-          <br>
-        </p>
-      </span>
-    </div>
+      <div class="skill">
+        <h1>Skill</h1>
 
-    <h1>Skill</h1>
-    <h2>Python</h2>
-    <ul>
-      <li>
-        Tkinter # GUI
-      </li>
-      <li>
-        OpenCV
-      </li>
-      <li>
-        TensorFlow # CNN & NLP
-      </li>
-      etc...
-    </ul>
+        <div class="Py">
+          <h2>Python</h2>
+          <ul>
+            <li>
+              Tkinter # GUI
+            </li>
+            <li>
+              OpenCV
+            </li>
+            <li>
+              TensorFlow # CNN & NLP
+            </li>
+            etc...
+          </ul>
+        </div>
 
-    <h2>C</h2>
-    <ul>
-      <li>
-        DXlibrary // GAME
-      </li>
-      <li>
-        Arduino
-      </li>
-    </ul>
+        <div class="C">
+          <h2>C</h2>
+          <ul>
+            <li>
+              DXlibrary // GAME
+            </li>
+            <li>
+              Arduino
+            </li>
+          </ul>
+        </div>
 
-    <h2>Web</h2>
-    <ul>
-      <li>
-        AFrame ＜!--Web AR--＞
-      </li>
-      <li>
-        ARCore ＜!--Web VR--＞
-      </li>
-    </ul>
+        <div class="Web">
+          <h2>Web</h2>
+          <ul>
+            <li>
+              AFrame ＜!--Web AR--＞
+            </li>
+            <li>
+              ARCore ＜!--Web VR--＞
+            </li>
+          </ul>
+        </div>
 
-    <h1>Like</h1>
-    <ul>
-      <li>
-        ツインテール
-      </li>
-      <li>
-        Security
-      </li>
-      <li>
-        VOCALOID
-      </li>
-    </ul>
+      </div>
 
-    <h1>資格・大会実績</h1>
-    <ul>
-      <li>
-        ITパスポート試験
-      </li>
-      <li>
-        工事担任者DD第3種
-      </li>
-      <li>
-        2015 RCJr全国大会 ダンス部門 総合5位・ステージパフォーマンス賞
-      </li>
-      <li>
-        2019 WRO 地区優勝・全国大会出場
-      </li>
-      <li>
-        2019 産業ロボコン 地区優勝・全国大会出場
-      </li>
-      etc...
-    </ul>
+      <div class="like">
+        <h1>Like</h1>
+        <ul>
+          <li>
+            ツインテール
+          </li>
+          <li>
+            security
+          </li>
+          <li>
+            VOCALOID
+          </li>
+        </ul>
+      </div>
 
+      <div class="capabi">
+        <h1>資格・大会実績</h1>
+        <ul>
+          <li>
+            ITパスポート試験
+          </li>
+          <li>
+            工事担任者DD第3種
+          </li>
+          <li>
+            2015 RCJr全国大会 ダンス部門 総合5位・ステージパフォーマンス賞
+          </li>
+          <li>
+            2019 WRO 地区優勝・全国大会出場
+          </li>
+          <li>
+            2019 産業ロボコン 地区優勝・全国大会出場
+          </li>
+          etc...
+        </ul>
+      </div>
+
+    </section>
+
+    <section class="side">
+      <h2>サイドコンテンツ</h2>
+      <p>超絶美少女🔰</p>
+      <h2>サイドリスト</h2>
+      <ul>
+        <li>chisenon</li>
+        <li>Skill</li>
+        <li>資格・大会実績</li>
+      </ul>
+    </section>
   </div>
 
   <footer>
@@ -139,6 +168,7 @@
       </p>
     </div>
   </footer>
+
 </body>
 
 </html>
