--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
     </section>
 
     <section class="side">
-      <h2>サイドコンテンツ</h2>
+      <h2>さいどめにゅー</h2>
       <p>超絶美少女🔰</p>
-      <h2>サイドリスト</h2>
+      <h2>おしながき</h2>
       <ul>
         <li>chisenon</li>
         <li>Skill</li>
