--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
           <h2>Web</h2>
           <ul>
             <li>
-              AFrame ＜!--Web AR--＞
+              A-Frame ＜!--Web AR--＞
             </li>
             <li>
-              ARCore ＜!--Web VR--＞
+              Three.js ＜!--Web VR--＞
             </li>
           </ul>
         </div>
