--- a/index.html
+++ b/index.html
@@ -44,18 +44,15 @@
   </header>
   <div class="wrapper">
     <section class="main">
-      <!--変更の余地あり-->
-
-      <p class="caution">⚠️このサイトはポートフォリオとして作成しておりますが、上手く動かないことがあります。</p>
 
       <div class="who">
         <img src="img/chisenon_icon.jpg" alt>
 
         <span class="answer">
-          <h1>chisenon</h1><!-- 本文 -->
+          <p class="name">chisenon</p>
           <p>関西人の血が流れています
             <br>
-            色々試してみたいお年頃の高校生エンジニア🔰です
+            色々試してみたいお年頃の高校生です
             <br>
             CとPythonでよく遊んでいます
             <br>
@@ -64,7 +61,7 @@
       </div>
 
       <div class="skill">
-        <h1>Skill</h1>
+        <p>Skill</p>
 
         <div class="Py">
           <h2>Python</h2>
@@ -109,13 +106,13 @@
       </div>
 
       <div class="like">
-        <h1>Like</h1>
+        <p>Like</p>
         <ul>
           <li>
-            ツインテール
+            security
           </li>
           <li>
-            security
+            ツインテール
           </li>
           <li>
             VOCALOID
@@ -123,40 +120,8 @@
         </ul>
       </div>
 
-      <div class="capabi">
-        <h1>資格・大会実績</h1>
-        <ul>
-          <li>
-            ITパスポート試験
-          </li>
-          <li>
-            工事担任者DD第3種
-          </li>
-          <li>
-            2015 RCJr全国大会 ダンス部門 総合5位・ステージパフォーマンス賞
-          </li>
-          <li>
-            2019 WRO 地区優勝・全国大会出場
-          </li>
-          <li>
-            2019 産業ロボコン 地区優勝・全国大会出場
-          </li>
-          etc...
-        </ul>
-      </div>
-
     </section>
 
-    <section class="side">
-      <h2>さいどめにゅー</h2>
-      <p>超絶美少女🔰</p>
-      <h2>おしながき</h2>
-      <ul>
-        <li>chisenon</li>
-        <li>Skill</li>
-        <li>資格・大会実績</li>
-      </ul>
-    </section>
   </div>
 
   <footer>
