--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="nav">
 
       <h1 class="title">
-        ちせのーと
+        ちせのーと_Ver.01
       </h1>
 
       <div class="higari"></div>
